After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 642075 - Some IDN URLs don't work as expected
Some IDN URLs don't work as expected
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: HTTP Transport
2.33.x
Other Linux
: Normal minor
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2011-02-11 00:59 UTC by Bengt Lüers
Modified: 2011-05-16 23:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Firefox_with_totem_plugin_fanboys (9.04 KB, application/octet-stream)
2011-02-11 19:15 UTC, Bengt Lüers
Details
Totem_fanboys (3.17 KB, application/octet-stream)
2011-02-11 19:17 UTC, Bengt Lüers
Details

Description Bengt Lüers 2011-02-11 00:59:25 UTC
I am trying to open an playable resource via HTTP in Totem via 'open location ...'. Because the real URL is obfuscated via an url shortener an error message occurs stating that an error occured and I perhaps do not have the permission needed to view the file.
Comment 1 Bastien Nocera 2011-02-11 01:35:45 UTC
Would be good if you could give us a way to reproduce the problem.
Comment 2 Bengt Lüers 2011-02-11 19:15:36 UTC
Created attachment 180679 [details]
Firefox_with_totem_plugin_fanboys
Comment 3 Bengt Lüers 2011-02-11 19:17:24 UTC
Created attachment 180680 [details]
Totem_fanboys
Comment 4 Bengt Lüers 2011-02-11 19:24:08 UTC
Actually it seems to be more of a problem with resolving the domainname than with following the redirect. I found two examples proving this:

But this will work:
http://cl.ly/4NaF/outtake.mp3 two letter top level domain redirecting via HTTP 302 (Moved Temporarily) to an MP3, served via HTTP 206 (Partial Content).

This will fail:
http://fanbóys.org/episodes/FAN006.mp3 Special Character Domain as specified in 'International Domainnames For Applications' redirecting via HTTP 302 (Moved Temporarily) to an MP3. I can't determine the type of HTTP-Stream this is. I hope, someone else can figure it out.

I made captures with wireshark for the latter example with Firefox (and the totem-plugin) and Totem alone.
Comment 5 Bastien Nocera 2011-02-11 19:50:29 UTC
$ totem "http://fanbóys.org/episodes/FAN006.mp3"
Gtk-Message: Failed to load module "pk-gtk-module": libpk-gtk-module.so: cannot open shared object file: No such file or directory
0:00:15.699794173 31190      0x1ded2c0 ERROR                  totem bacon-video-widget-gst-0.10.c:418:bvw_error_msg: message = Not Found
0:00:15.699833040 31190      0x1ded2c0 ERROR                  totem bacon-video-widget-gst-0.10.c:420:bvw_error_msg: domain  = 4312 (gst-resource-error-quark)
0:00:15.699842499 31190      0x1ded2c0 ERROR                  totem bacon-video-widget-gst-0.10.c:421:bvw_error_msg: code    = 5
0:00:15.699849675 31190      0x1ded2c0 ERROR                  totem bacon-video-widget-gst-0.10.c:422:bvw_error_msg: debug   = gstsouphttpsrc.c(1115): gst_soup_http_src_parse_status (): /GstPlayBin2:play/GstURIDecodeBin:uridecodebin0/GstSoupHTTPSrc:source:
Not Found (404), URL: http://fanbóys.org/episodes/FAN006.mp3
0:00:15.699862365 31190      0x1ded2c0 ERROR                  totem bacon-video-widget-gst-0.10.c:423:bvw_error_msg: source  = <source>
0:00:15.699872022 31190      0x1ded2c0 ERROR                  totem bacon-video-widget-gst-0.10.c:424:bvw_error_msg: uri     = http://fanbóys.org/episodes/FAN006.mp3
** Message: Error: Not Found
gstsouphttpsrc.c(1115): gst_soup_http_src_parse_status (): /GstPlayBin2:play/GstURIDecodeBin:uridecodebin0/GstSoupHTTPSrc:source:
Not Found (404), URL: http://fanbóys.org/episodes/FAN006.mp3

It seems that it's the GStreamer plugin being broken. libsoup has IDN support (see bug 432778 for an old Totem bug and bug 548287 for the libsoup one).

FWIW, gvfs seems to choke on it as well.
Comment 6 Sebastian Dröge (slomo) 2011-02-15 17:07:23 UTC
tests/get of libsoup also returns 404
Comment 7 Sebastian Dröge (slomo) 2011-02-15 17:10:10 UTC
While http://www.kåremåla.se/main.php works. I don't think this is a GStreamer bug, reassigning to libsoup. This is with libsoup 2.33.6 btw.
Comment 8 Sebastian Dröge (slomo) 2011-02-15 17:11:29 UTC
And I should probably add that http://fanbóys.org/episodes/FAN006.mp3 works in epiphany with webkit
Comment 9 Dan Winship 2011-02-15 19:09:54 UTC
oops, we're sending the UTF-8 hostname in the Host header rather than the asciified version, so if the server does virtual hosting and needs to check that, it won't match.
Comment 10 Dan Winship 2011-02-15 20:15:50 UTC
fixed in git
Comment 11 Bastien Nocera 2011-05-16 23:07:14 UTC
Yep, works as expected in Totem and gvfs now. Thanks Dan!